minor overflow fix

--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 body {
     font-family: "Roboto", serif;
+    overflow-x: hidden;
 }
 
 .header {
